compiler/tests/fuzz/negative_corpus/check_undefined_ident.mlc
fn f() -> i32 = no_such_binding